# innerspeech

./: LICENSE  README.md  README.rst  installation.rst  pyproject.toml
.github/workflows/: blank.yml  build.yml
docker/: Dockerfile  README.rst
docker/core/: Dockerfile
docker/dev/: Dockerfile
examples/: README.rst
examples/eeg/cui_2024/: README.rst
examples/emg/gaddy_2022/: README.rst
examples/hdeeg/sato_2024/: README.rst
examples/microelectrode/willett_2023/: README.rst  dataset.py  download.sh  model.py  predict.py  prepare_bpe_token.py  preprocess.py  train_bpe_pl.py  train_char_pl_v1.py  train_char_pl_v2.py  train_phoneme_pl.py  train_pl.py
examples/microelectrode/willett_2023/configs/: config_best.yaml  config_best_transformer.yaml  config_bpe_128.yaml  config_bpe_32.yaml  config_bpe_32_pyctc.yaml  config_bpe_64.yaml  config_bpe_64_pyctc.yaml  config_char.yaml  config_phoneme.yaml
examples/microelectrode/willett_2023/notebooks/: lm.ipynb  pyctc.ipynb  rescore.ipynb  rescore.py
examples/microelectrode/willett_2023/pretrained/: m128.model  m128.vocab  m256.model  m256.vocab  m32.model  m32.vocab  m512.model  m512.vocab  m64.model  m64.vocab
examples/microelectrode/willett_2023/refs/: true_dev_Transcriptions.txt  true_train_Transcriptions.txt
examples/microelectrode/willett_2023/results/: decodedSeq_11.056.txt  decodedSeq_2024-03-17-21-04-09_bpe_64.txt  decodedSeq_2024-03-22-15-23-01_gru_test_train.txt  decodedSeq_bpe128_.txt  decodedSeq_bpe32.txt  decodedSeq_bpe32_.txt  decodedSeq_bpe64.txt  decodedSeq_bpe64_.txt  (+22 more)
tutorials/: README.rst
